--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -767,4 +767,12 @@
     <string name="lbl_track_progress">Progressi</string>
     <string name="error_total_pages_must_be_larger_than_current_page">Deve essere maggiore o uguale alla pagina corrente</string>
     <string name="info_builtin_style_asterix">(* stili predefiniti)</string>
+    <string name="pt_dialog_and_menu_popup_tuning">Finestre di dialogo e menu</string>
+    <string name="pe_option_bottom_sheet">Sempre nella parte inferiore dello schermo</string>
+    <string name="pt_ui_dialogs_mode">Finestre di dialogo</string>
+    <string name="pe_ui_dialog_mode_classic">Sempre come una classica finestra di dialogo</string>
+    <string name="pe_ui_dialog_mode_by_screen_size">Gli schermi più grandi (come i tablet) utilizzano le classiche finestre di dialogo, mentre gli schermi più piccoli visualizzano le finestre di dialogo nella parte inferiore dello schermo.</string>
+    <string name="pc_context_menus">Menu contestuali e di riga</string>
+    <string name="pe_context_menu_mode_classic">Sempre come un classico menu contestuale</string>
+    <string name="pe_context_menu_mode_by_size">I menu lunghi sono visualizzati nella parte inferiore dello schermo, mentre i menu brevi sono i classici menu contestuali.</string>
 </resources>
