--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -763,4 +763,12 @@
     <string name="lbl_track_progress">Vooruitgang</string>
     <string name="error_total_pages_must_be_larger_than_current_page">Moet groter of gelijk zijn aan de huidige pagina</string>
     <string name="info_builtin_style_asterix">(* standaard stijlen)</string>
+    <string name="pt_dialog_and_menu_popup_tuning">Dialogen en menu\'s</string>
+    <string name="pe_option_bottom_sheet">Altijd onderaan het scherm</string>
+    <string name="pt_ui_dialogs_mode">Dialogen</string>
+    <string name="pe_ui_dialog_mode_classic">Altijd als een klassieke dialoog</string>
+    <string name="pe_ui_dialog_mode_by_screen_size">Grotere schermen (zoals tablets) gebruiken klassieke dialoogvensters, terwijl kleinere schermen de dialoogvensters onderaan het scherm weergeven.</string>
+    <string name="pc_context_menus">Context- en rijmenu\'s</string>
+    <string name="pe_context_menu_mode_classic">Altijd als een klassiek contextmenu</string>
+    <string name="pe_context_menu_mode_by_size">Lange menu\'s worden onderaan het scherm weergegeven en korte menu\'s zijn klassieke contextmenu\'s.</string>
 </resources>
