--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <!--
   ~ @Copyright 2018-2024 HardBackNutter
   ~ @License GNU General Public License
@@ -17,7 +18,9 @@
   ~
   ~ You should have received a copy of the GNU General Public License
   ~ along with NeverTooManyBooks. If not, see <http://www.gnu.org/licenses/>.
-  --><!DOCTYPE resources [
+  -->
+
+<!DOCTYPE resources [
 <!ENTITY APP_NAME "NeverTooManyBooks">
 ]>
 <!-- Quotes „…“  - Regex to find wrong ones: ('|”|‘|’|«|») --><!--suppress LongLine --><resources>
@@ -760,4 +763,12 @@
     <string name="lbl_track_progress">Fortschritt</string>
     <string name="error_total_pages_must_be_larger_than_current_page">Muss größer oder gleich der aktuellen Seite sein</string>
     <string name="info_builtin_style_asterix">(* Standardstile)</string>
+    <string name="pt_dialog_and_menu_popup_tuning">Dialoge und Menüs</string>
+    <string name="pe_option_bottom_sheet">Immer am unteren Rand des Bildschirms</string>
+    <string name="pt_ui_dialogs_mode">Dialoge</string>
+    <string name="pe_ui_dialog_mode_classic">Immer als klassischer Dialog</string>
+    <string name="pe_ui_dialog_mode_by_screen_size">Auf größeren Bildschirmen (z. B. Tablets) werden klassische Dialogfelder verwendet, während auf kleineren Bildschirmen die Dialogfelder am unteren Rand des Bildschirms angezeigt werden.</string>
+    <string name="pc_context_menus">Kontext- und Zeilenmenüs</string>
+    <string name="pe_context_menu_mode_classic">Immer als klassisches Kontextmenü</string>
+    <string name="pe_context_menu_mode_by_size">Lange Menüs werden am unteren Rand des Bildschirms angezeigt, kurze Menüs sind klassische Kontextmenüs.</string>
 </resources>
