--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -768,4 +768,12 @@
     <string name="lbl_track_progress">Progrès</string>
     <string name="error_total_pages_must_be_larger_than_current_page">Doit être supérieur ou égal à la page actuelle</string>
     <string name="info_builtin_style_asterix">(* styles par défaut)</string>
+    <string name="pt_dialog_and_menu_popup_tuning">Dialogues et menus</string>
+    <string name="pe_option_bottom_sheet">Toujours en bas de l\'écran</string>
+    <string name="pt_ui_dialogs_mode">Dialogues</string>
+    <string name="pe_ui_dialog_mode_classic">Toujours sous forme de dialogue classique</string>
+    <string name="pe_ui_dialog_mode_by_screen_size">Les écrans de grande taille (tels que les tablettes) utilisent des boîtes de dialogue classiques, tandis que les écrans plus petits affichent les boîtes de dialogue en bas de l\'écran.</string>
+    <string name="pc_context_menus">Menu contextuel et menu de ligne</string>
+    <string name="pe_context_menu_mode_classic">Toujours comme un menu contextuel classique</string>
+    <string name="pe_context_menu_mode_by_size">Les menus longs sont affichés en bas de l\'écran et les menus courts sont des menus contextuels classiques.</string>
 </resources>
