--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -777,7 +777,7 @@
     <string name="pt_dialog_and_menu_popup_tuning">Diyaloglar ve Menüler</string>
     <string name="pe_option_bottom_sheet">Her zaman ekranın alt kısmında</string>
     <string name="pt_ui_dialogs_mode">Diyaloglar</string>
-    <string name="pe_ui_dialog_mode_classic">Her zaman klasik bir Diyalog olarak</string>
+    <string name="pe_ui_dialog_mode_classic">Her zaman klasik bir iletişim kutusu olarak</string>
     <string name="pe_ui_dialog_mode_by_screen_size">Daha büyük ekranlarda (tabletler gibi) klasik iletişim kutuları kullanılırken, daha küçük ekranlarda iletişim kutuları ekranın altında görüntülenir.</string>
     <string name="pc_context_menus">Bağlam ve satır menüleri</string>
     <string name="pe_context_menu_mode_classic">Her zaman klasik bir içerik menüsü olarak</string>
