--- a/app/src/main/res/values-el/strings.xml
+++ b/app/src/main/res/values-el/strings.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <!--
   ~ @Copyright 2018-2024 HardBackNutter
   ~ @License GNU General Public License
@@ -17,7 +18,9 @@
   ~
   ~ You should have received a copy of the GNU General Public License
   ~ along with NeverTooManyBooks. If not, see <http://www.gnu.org/licenses/>.
-  --><!DOCTYPE resources [
+  -->
+
+<!DOCTYPE resources [
 <!ENTITY APP_NAME "NeverTooManyBooks">
 ]>
 <!-- Quotes «…»  - Regex to find wrong ones: ('|„|“|”|‘|’) --><!--suppress LongLine --><resources>
@@ -769,4 +772,7 @@
     <string name="pc_context_menus">Μενού περιβάλλοντος και γραμμής</string>
     <string name="pe_context_menu_mode_classic">Πάντα ως κλασικό μενού περιβάλλοντος</string>
     <string name="pe_context_menu_mode_by_size">Τα μακρά μενού εμφανίζονται στο κάτω μέρος της οθόνης και τα σύντομα μενού είναι τα κλασικά μενού περιβάλλοντος.</string>
+    <string name="lbl_troubleshooting">Αντιμετώπιση προβλημάτων</string>
+    <string name="pt_enable_extra_logging">Ενεργοποίηση πρόσθετης καταγραφής</string>
+    <string name="lbl_troubleshooting_warning">Παρακαλούμε μην ενεργοποιείτε τις παρακάτω επιλογές, εκτός αν σας ζητηθεί ρητά από τον προγραμματιστή της εφαρμογής.</string>
 </resources>
