--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <!--
   ~ @Copyright 2018-2024 HardBackNutter
   ~ @License GNU General Public License
@@ -17,7 +18,9 @@
   ~
   ~ You should have received a copy of the GNU General Public License
   ~ along with NeverTooManyBooks. If not, see <http://www.gnu.org/licenses/>.
-  --><!DOCTYPE resources [
+  -->
+
+<!DOCTYPE resources [
 <!ENTITY APP_NAME "NeverTooManyBooks">
 ]>
 <!-- Quotes «…»  - Regex to find wrong ones: ('|„|“|”|‘|’) --><!--suppress LongLine --><resources>
@@ -782,4 +785,7 @@
     <string name="pc_context_menus">Menús contextuales y de filas</string>
     <string name="pe_context_menu_mode_classic">Siempre como un menú contextual clásico</string>
     <string name="pe_context_menu_mode_by_size">Los menús largos se muestran en la parte inferior de la pantalla y los cortos son menús contextuales clásicos.</string>
+    <string name="lbl_troubleshooting">Solución de problemas</string>
+    <string name="pt_enable_extra_logging">Activar registro adicional</string>
+    <string name="lbl_troubleshooting_warning">No active las siguientes opciones a menos que el desarrollador de la aplicación se lo pida explícitamente.</string>
 </resources>
