--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <!--
   ~ @Copyright 2018-2024 HardBackNutter
   ~ @License GNU General Public License
@@ -17,7 +18,9 @@
   ~
   ~ You should have received a copy of the GNU General Public License
   ~ along with NeverTooManyBooks. If not, see <http://www.gnu.org/licenses/>.
-  --><!DOCTYPE resources [
+  -->
+
+<!DOCTYPE resources [
 <!ENTITY APP_NAME "NeverTooManyBooks">
 ]>
 <!-- Quotes “…” - Regex to find wrong ones: ('|„|‘|’|«|») --><!--suppress LongLine --><resources xmlns:tools="http://schemas.android.com/tools">
@@ -1509,4 +1512,7 @@
     <string name="pt_ui_dialogs_mode">Hộp thoại</string>
     <string name="pc_context_menus">Thực đơn ngữ cảnh và hàng</string>
     <string name="pe_context_menu_mode_classic">Luôn là một thực đơn ngữ cảnh cổ điển</string>
+    <string name="lbl_troubleshooting">Xử lý sự cố</string>
+    <string name="pt_enable_extra_logging">Cho phép ghi nhật ký bổ sung</string>
+    <string name="lbl_troubleshooting_warning">Vui lòng không bật các tùy chọn bên dưới trừ khi nhà phát triển ứng dụng yêu cầu làm như vậy một cách rõ ràng.</string>
 </resources>
